buttons generating new themes

--- a/index.html
+++ b/index.html
@@ -10,67 +10,84 @@
     <form id="show-form">
       <h1>Enter your favorite TV Show:  </h1>
       <input type="text" id="show-input" placeholder="e.g. Sesame Street">
-      <input id="sumbit-animal" type="submit" value="submit">
+      <input id="sumbit-show" type="submit" value="submit">
     </form>
     <div id="show-gifs">
     </div>
   <script>
-  $(document).ready( function(){
 
-    var tvShows = ["arrested development", "breaking bad", "scrubs", "the office", "parks and recreation", "mr robot", "the walking dead", "mad men", "lost", "modern family"];
-
-    for (var i = 0; i < tvShows.length; i++) {
-      $("#show-buttons").append("<button class=' btn btn-light btn-sm' id='"+tvShows[i]+"'> "+tvShows[i]+"</button>");
-    }
+  $(document).ready(function(){
 
     var trendingURL = "https://api.giphy.com/v1/gifs/trending?api_key=K4KU6OMUATEW1UmbAjY53j4ZGoSI0e9Y";
+    var tvShows = ["arrested development", "breaking bad", "scrubs", "the office", "parks and recreation", "mr robot", "the walking dead", "mad men", "lost", "modern family"];
+
+    function makeButtons (){
+      $("#show-buttons").empty();
+      for (var i = 0; i < tvShows.length; i++) {
+        var newButton = $("<button>");
+        newButton.addClass("button");
+        newButton.attr("data-name", tvShows[i]);
+        newButton.text(tvShows[i]);
+        $("#show-buttons").append(newButton);
+      };
+    };
 
     $.ajax({
       url: trendingURL,
       method: 'GET'
     }).done(function(response) {
       console.log(response);
+      $("#show-gifs").empty();
         for (var i = 0; i < 10; i++) {
           var still = response.data[i].images.original_still.url;
           var id = response.data[i].id;
-          $("#show-gifs").append('<img src=' + still + ' id='+id+' >'); //this click event returns img src url and id from response
-        }
-        //on click event when still image is clicked on
-        $("#show-gifs").on('click', 'img', function() {
-          alert("this is an image");
-          console.log(this.id);
+          var notStill = response.data[i].images.original.url;
+          // $("#show-gifs").prepend('<img src=' + still + ' id='+id+' >'); //this click event returns img src url and id from response
+            // Creating a div to hold the movie
+            var showDiv = $("<div class='show'>");
+            var rating = response.data[i].rating;
+            var displayRating = $("<p>").text("Rating: " + rating);
+            showDiv.append(displayRating);
+            var image = $("<img>").attr({"src": still, "id": id, "height":250});
+            showDiv.append(image);
+            $("#show-gifs").prepend(showDiv);
+        };
+      });
+
+    function animateGif() {
+      console.log(this.id);
+    }
+
+    function changeTheme() {
+        var show = $(this).attr("data-name");
+        var changeURL = "https://api.giphy.com/v1/gifs/search?q=" + show + "&api_key=K4KU6OMUATEW1UmbAjY53j4ZGoSI0e9Y";
+        $.ajax({
+          url: changeURL,
+          method: "GET"
+        }).done(function(response) {
+          console.log(response);
+          $("#show-gifs").empty();
+            for (var i = 0; i < 10; i++) {
+              var still = response.data[i].images.original_still.url;
+              var id = response.data[i].id;
+              var notStill = response.data[i].images.original.url;
+                var showDiv = $("<div class='show'>");
+                var rating = response.data[i].rating;
+                var displayRating = $("<p>").text("Rating: " + rating);
+                showDiv.append(displayRating);
+                var image = $("<img>").attr({"src": still, "id": id, "height":250});
+                showDiv.append(image);
+                $("#show-gifs").prepend(showDiv);
+            }
         });
+    }
 
-    });
+      $(document).on("click", "img", animateGif);
+      $(document).on("click", "button", changeTheme);
 
-
-//on click event when a button is clicked on
-$("#show-buttons").on('click', '.btn', function() {
-  alert("this is a button");
-  console.log(this.id);
-  var buttonURL = "https://api.giphy.com/v1/gifs/search?q=" +(this.id) + "&api_key=K4KU6OMUATEW1UmbAjY53j4ZGoSI0e9Y";
-  $.ajax({
-    url: buttonURL,
-    method: 'GET'
-  }).done(function(response) {
-    console.log(response);
-      for (var i = 0; i < 10; i++) {
-        var still = response.data[i].images.original_still.url;
-        var id = response.data[i].id;
-        $("#show-gifs").append('<img src=' + still + ' "id='+id+'" >'); //this click event returns img src url and id from response
-      }
-    });
-
+  makeButtons();
 });
-
-
-
-
-
-}); //end of document ready function
+//end of document ready function
   </script>
-
-
-
   </body>
 </html>
