--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <input type="text" id="show-input" placeholder="e.g. Sesame Street">
       <input id="submit-show" type="submit" value="submit">
     </form>
-    <div id="show-gifs"></div>
+    <div class="row">
+      <div class="col-md-12" id="show-gifs"></div>
+    </div>
   </div> <!-- end of container -->
   </body>
 </html>
